<resources>
    <string name="app_name">Ejercicio3</string>

    <string name="titulo">Grades</string>
    <string name="primer">Quizzes: </string>
    <string name="segundo">Presentations: </string>
    <string name="tercero">Practices: </string>
    <string name="cuarto">Proyect: </string>
    <string name="fina">Final</string>
    <string name="def">0.0</string>
    <string name="action_settings">Settings</string>
</resources>
