<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/powderblue">

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:layout_marginLeft="25dp"
        android:text="@string/primer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="left"
        android:textColor="@color/gray"/>

        <EditText
            android:layout_marginLeft="90dp"
            android:id="@+id/num1"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="25dp"
            android:text="@string/segundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="left"
            android:textColor="@color/gray"/>

        <EditText
            android:layout_marginLeft="5dp"
            android:id="@+id/num2"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="25dp"
            android:text="@string/tercero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="left"
            android:textColor="@color/gray"/>

        <EditText
            android:layout_marginLeft="55dp"
            android:id="@+id/num3"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="25dp"
            android:text="@string/cuarto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="left"
            android:textColor="@color/gray"/>

        <EditText
            android:gravity="right"
            android:layout_marginLeft="60dp"
            android:id="@+id/num4"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/gray"
        android:layout_marginBottom="30dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/boton"
            android:layout_marginLeft="25dp"
            android:text="@string/fina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/gray" />

        <TextView
            android:text="@string/def"
            android:layout_marginLeft="30dp"
            android:id="@+id/end"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>
